<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/ivImage2"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/image" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/recipe_name"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/txtRecipeName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:text="@string/ingredients"
        android:textSize="22sp"
        android:id="@+id/txtIngredients"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/method"
        android:textSize="22sp"
        android:id="@+id/txtMethod"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="31dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="btnUpdateRecipe"
            android:text="@string/update"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="31dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="btnDeleteRecipe"
            android:text="@string/delete"
            android:textColor="#ffffff"
            android:textSize="22sp" />

    </RelativeLayout>



</LinearLayout>